--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="header__menu-bar">
         <div class="header__logo-box">
           <svg class="logo">
-            <use xlink:href="img/sprite.svg#buildco-logo-green"></use>
+            <use xlink:href="img/sprite.svg#JfmConstructionPtyLtd-logo-green"></use>
           </svg>
         </div>
 
@@ -51,7 +51,7 @@
         <div class="header__hero-img-box">
           <img
             src="img/hero-img-2x.png"
-            alt="BuildCo Hero Image"
+            alt="JfmConstructionPtyLtd Hero Image"
             srcset="img/hero-img-1x.png 1x, img/hero-img-2x.png 2x"
             class="header__hero-img"
           />
@@ -479,7 +479,7 @@
 
       <div class="footer__row-3 u-margin-top-small">
         <svg class="logo">
-          <use xlink:href="img/sprite.svg#buildco-logo-white"></use>
+          <use xlink:href="img/sprite.svg#JfmConstructionPtyLtd-logo-white"></use>
         </svg>
         <p class="developer-text">Designed with 🤍 && 🔥 by Tinyiko Maswanganyi</p>
       </div>
