--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
         <div class="header__text-box">
           <h1 class="heading-primary u-margin-bottom-small">
+            <strong>Welcome To JFM Construction Company</strong><br>
             <span class="heading-primary--sub"> If you can Imagine it, </span>
             <span class="heading-primary--main">
               We can <span class="emphasis">build</span> it.
