--- a/index.html
+++ b/index.html
@@ -326,15 +326,19 @@
                 </span>
                 Visit us personally
               </h3>
-              <p class="paragraph u-margin-bottom-small">
+               <p class="paragraph u-margin-bottom-small" style="color: black;">
                 3842 Bloubuikir street JohnPark Boksburg Gauteng 1452 South Africa<br>
+                <br>
                 <strong>Get In Touch With Us</strong><br>
+                <br>
                 <strong>Johannes Mafumo</strong><br>
                 <strong>Phone: 0715346002</strong><br>
                 <strong>Email: jzeekhali@gmail.com</strong><br>
+                <br>
                 <strong>Joao Mangue Junior</strong><br>
                 <strong>Phone: 0739844047</strong><br>
                 <strong>Email: mangueeto@gmail.com</strong><br>
+                <br>
                 <strong>Lilian Malamule</strong><br>
                 <strong>Phone: 0746938655</strong>
               </p>
@@ -457,22 +461,23 @@
       </div>
 
       <div class="footer__row-2 u-margin-top-small">
-        <p class="copyright">&copy; 2024 JFM Construction. All Rights Reserved.</p>
+        <p class="copyright">&copy; 2024 JFM Construction. All Rights Reserved.<br>
+        Designed By Tinyiko Maswanganyi</p>
 
         <div class="footer__social-icons-box">
           <a href="#" class="footer__social-link">
             <svg class="social-icon">
-              <use xlink:href="img/sprite.svg#facebook"></use>
+              <use xlink:href="css/img/sprite.svg#facebook"></use>
             </svg>
           </a>
           <a href="#" class="footer__social-link">
             <svg class="social-icon">
-              <use xlink:href="img/sprite.svg#instagram"></use>
+              <use xlink:href="css/img/sprite.svg#instagram"></use>
             </svg>
           </a>
           <a href="#" class="footer__social-link">
             <svg class="social-icon">
-              <use xlink:href="img/sprite.svg#twitter"></use>
+              <use xlink:href="css/img/sprite.svg#twitter"></use>
             </svg>
           </a>
         </div>
@@ -482,7 +487,6 @@
         <svg class="logo">
           <use xlink:href="img/sprite.svg#JfmConstructionPtyLtd-logo-white"></use>
         </svg>
-        <p class="developer-text">Designed with 🤍 && 🔥 by Tinyiko Maswanganyi</p>
       </div>
     </footer>
   </body>
