--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JFM Construction &mdash; We construct with Elegance and Class 💯</title>
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="css/img/favicon.png" type="image/x-icon" />
 
     <!-- Development CSS -->
     <!-- <link rel="stylesheet" href="css/style.css" /> -->
@@ -18,7 +18,7 @@
       <div class="header__menu-bar">
         <div class="header__logo-box">
           <svg class="logo">
-            <use xlink:href="img/sprite.svg#JfmConstructionPtyLtd-logo-green"></use>
+            <use xlink:href="css/img/sprite.svg#JfmConstructionPtyLtd-logo-green"></use>
           </svg>
         </div>
 
@@ -50,9 +50,9 @@
       <div class="header__content u-margin-bottom-big">
         <div class="header__hero-img-box">
           <img
-            src="img/hero-img-2x.png"
+            src="css/img/hero-img-2x.png"
             alt="JfmConstructionPtyLtd Hero Image"
-            srcset="img/hero-img-1x.png 1x, img/hero-img-2x.png 2x"
+            srcset="css/img/hero-img-1x.png 1x, img/hero-img-2x.png 2x"
             class="header__hero-img"
           />
         </div>
@@ -70,20 +70,7 @@
             values to deliver lasting change for our stakeholders and the
             communities we work in.
           </p>
-
-          <div class="header__form-group">
-            <form action="#" class="header__form">
-              <input
-                class="header__form-input u-margin-bottom-mid"
-                type="email"
-                name="email"
-                id="email"
-                placeholder="Enter Your Email"
-                autocomplete="off"
-                required
-              />
-              <button class="btn btn--green">Let's Build</button>
-            </form>
+           <img src="css/img/am.jpg" alt="" width="500" height="600">
           </div>
         </div>
       </div>
@@ -153,7 +140,7 @@
           <li>Painting</li>
           <li>Surface Preparations</li>
         </p>
-
+           <br>
         <div class="what-we-offer__content-box">
           <div class="what-we-offer__content">
             <h4 class="what-we-offer__title u-margin-bottom-small">
@@ -173,7 +160,7 @@
             <h4 class="what-we-offer__title u-margin-bottom-small">
               <span class="icon-box">
                 <svg class="icon">
-                  <use xlink:href="img/sprite.svg#compass"></use>
+                  <use xlink:href="css/img/sprite.svg#compass"></use>
                 </svg>
               </span>
               Architectural Designs
@@ -187,7 +174,7 @@
             <h4 class="what-we-offer__title u-margin-bottom-small">
               <span class="icon-box">
                 <svg class="icon">
-                  <use xlink:href="img/sprite.svg#electric"></use>
+                  <use xlink:href="css/img/sprite.svg#electric"></use>
                 </svg>
               </span>
               Commercial and Electrical Installations
@@ -201,7 +188,7 @@
             <h4 class="what-we-offer__title u-margin-bottom-small">
               <span class="icon-box">
                 <svg class="icon">
-                  <use xlink:href="img/sprite.svg#view"></use>
+                  <use xlink:href="css/img/sprite.svg#view"></use>
                 </svg>
               </span>
               Landscaping & External Works
@@ -215,7 +202,7 @@
             <h4 class="what-we-offer__title u-margin-bottom-small">
               <span class="icon-box">
                 <svg class="icon">
-                  <use xlink:href="img/sprite.svg#mechanic"></use>
+                  <use xlink:href="css/img/sprite.svg#mechanic"></use>
                 </svg>
               </span>
               Mechanical and Renewables
@@ -230,7 +217,7 @@
             <h4 class="what-we-offer__title u-margin-bottom-small">
               <span class="icon-box">
                 <svg class="icon">
-                  <use xlink:href="img/sprite.svg#roof"></use>
+                  <use xlink:href="css/img/sprite.svg#roof"></use>
                 </svg>
               </span>
               Roofing Installation
@@ -269,10 +256,10 @@
           <div class="mission__right">
             <div class="mission__img-box">
               <img
-                src="img/mission-img-2x.png"
+                src="css/img/mission-img-2x.png"
                 alt="Mission Image"
                 class="mission__img"
-                srcset="img/mission-img-1x.png 1x, img/mission-img-2x.png 2x"
+                srcset="css/img/mission-img-1x.png 1x, css/img/mission-img-2x.png 2x"
               />
             </div>
           </div>
@@ -282,10 +269,10 @@
       <section class="why-us">
         <div class="why-us__left">
           <img
-            src="img/why-us-img-2x.png"
+            src="css/img/why-us-img-2x.png"
             alt="Why us"
             class="why-us__img"
-            srcset="img/why-us-img-1x.png 1x, img/why-us-img-2x.png 2x"
+            srcset="css/img/why-us-img-1x.png 1x, css/img/why-us-img-2x.png 2x"
           />
         </div>
 
@@ -321,7 +308,7 @@
               <h3 class="contact-us__title u-margin-bottom-small">
                 <span class="contact-us__icon-box">
                   <svg class="arr-down">
-                    <use xlink:href="img/sprite.svg#arrow-down-green"></use>
+                    <use xlink:href="css/img/sprite.svg#arrow-down-green"></use>
                   </svg>
                 </span>
                 Visit us personally
