--- a/index.html
+++ b/index.html
@@ -303,6 +303,15 @@
               we establish ongoing relationships that allow us to materially
               contribute to their long-term success.
             </p>
+              <br>
+           <h5 class="heading-tertiary u-margin-bottom-small" style="color: black;">Our Team</h5>
+           <p class="paragraph u-margin-bottom-mid"><strong>
+            Johannes-Managing director
+            <br>
+            Joao-Construction manager
+            <br>
+            Lillian-Designer(Civil Enginner)</strong>
+           </p>
 
             <div class="contact-us__inner-content-box">
               <h3 class="contact-us__title u-margin-bottom-small">
