--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
 
       <div class="footer__row-3 u-margin-top-small">
         <svg class="logo">
-          <use xlink:href="img/sprite.svg#JfmConstructionPtyLtd-logo-white"></use>
+          <use xlink:href="css/img/sprite.svg#JfmConstructionPtyLtd-logo-white"></use>
         </svg>
       </div>
     </footer>
