--- a/index.html
+++ b/index.html
@@ -292,72 +292,31 @@
           </p>
         </div>
       </section>
-       <section class="justified-grid-gallary">
         <h6 class="heading-secondary u-margin-bottom-big" style="text-align: center;">LATEST DEVELOPMENTS FROM JFM CONSTRUCTION</h6>
         <br>
-        <figure style="width: 100; height: 100;">
-          <img src="css/img/ab.jpg" alt="">
-        </figure>
-        <figure style="width: 100; height: 100;">
-          <img src="css/img/ac.jpg">
-        </figure>
-        <figure style="width: 100; height: 100;">
-          <img src="css/img/am.jpg">
-        </figure>
-        <figure style="width: 100; height: 100;">
-          <img src="css/img/bc.jpg">
-        </figure>
-        <figure style="width: 100; height: 100;">
-          <img src="css/img/bm.jpg">
-        </figure>
-        <figure style="width: 100;height: 100;">
-          <img src="css/img/cs.jpg">
-        </figure>
-        <figure style="width: 100; height: 100;">
-          <img src="css/img/dh.jpg">
-        </figure>
-        <figure style="width: 100; height: 100;">
-          <img src="css/img/fn.jpg">
-        </figure>
-        <figure style="width: 100; height: 100;">
-          <img src="css/img/gj.jpg">
-        </figure>
-        <figure style="width: 100; height: 100;">
-          <img src="css/img/kj.jpg">
-        </figure>
-        <figure style="width: 100; height: 100;">
-          <img src="css/img/lf.jpg">
-        </figure>
-        <figure style="width: 100; height: 100;">
-          <img src="css/img/mk.jpg">
-        </figure>
-        <figure style="width: 100; height: 100;">
-          <img src="css/img/op.jpg">
-        </figure>
-        <figure style="width: 100; height: 100;">
-          <img src="css/img/po.jpg">
-        </figure>
-        <figure style="width: 100; height: 100;">
-          <img src="css/img/rb.jpg">
-        </figure>
-        <figure style="width: 100; height: 100;">
-          <img src="css/img/rt.jpg">
-        </figure>
-        <figure style="width: 100; height: 100;">
-          <img src="css/img/st.jpg">
-        </figure>
-        <figure style="width: 100; height: 100;">
-          <img src="css/img/tm.jpg">
-        </figure>
-        <figure style="width: 100; height: 100;">
-          <img src="css/img/vb.jpg">
-        </figure>
-        <figure style="width: 100; height: 100;">
-          <img src="css/img/wt.jpg">
-        </figure>
-        <figure style="width: 100; height: 100;">
-          <img src="css/img/xz.jpg">
-        </figure>
+          <div id="images">
+        
+          <img src="css/img/ab.jpg" alt=""/>
+          <img src="css/img/ac.jpg" alt=""/>
+          <img src="css/img/am.jpg" alt=""/>
+          <img src="css/img/bc.jpg" alt=""/>
+          <img src="css/img/bm.jpg" alt=""/>
+          <img src="css/img/cs.jpg" alt=""/>
+          <img src="css/img/dh.jpg" alt=""/>
+          <img src="css/img/fn.jpg" alt=""/>
+          <img src="css/img/gj.jpg" alt=""/>
+          <img src="css/img/kj.jpg" alt=""/>
+          <img src="css/img/lf.jpg" alt=""/>
+          <img src="css/img/mk.jpg" alt=""/>
+          <img src="css/img/op.jpg" alt=""/>
+          <img src="css/img/rb.jpg" alt=""/>
+          <img src="css/img/rt.jpg" alt=""/>
+          <img src="css/img/st.jpg" alt=""/>
+          <img src="css/img/tm.jpg" alt=""/>
+          <img src="css/img/vb.jpg" alt=""/>
+          <img src="css/img/wt.jpg" alt=""/>
+          <img src="css/img/xz.jpg" alt=""/>
+          </div>
       </section>
 
       <section class="contact-us">
