--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             values to deliver lasting change for our stakeholders and the
             communities we work in.
           </p>
-           <img src="css/img/am.jpg" alt="" width="600" height="600">
+           <img src="css/img/am.jpg" alt="" width="450" height="450">
           </div>
         </div>
       </div>
@@ -146,7 +146,7 @@
             <h4 class="what-we-offer__title u-margin-bottom-small">
               <span class="icon-box">
                 <svg class="icon">
-                  <use xlink:href="img/sprite.svg#crane"></use>
+                  <use xlink:href="css/img/sprite.svg#crane"></use>
                 </svg>
               </span>
               New Building Construction
