--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
             </span>
           </h1>
           <p class="heading-sub u-margin-bottom-mid">
-            We are a people-orientated, progressive business, driven by our
-            values to deliver lasting change for our stakeholders and the
-            communities we work in.
+            We are a people-orientated, progressive business, 
+            driven by our values to deliver lasting change
+            for our stakeholders and the communities we work in.
           </p>
            <img src="css/img/am.jpg" alt="" width="500" height="450">
           </div>
